allow to add drawing
