# back/modules/generated/app/be/frol/game/api/LostInTranslationApi.scala
@@ -1,14 +1,14 @@
 package be.frol.game.api
 
 import be.frol.game.model.LostInTranslationGame
+import play.api.libs.Files.TemporaryFile
 
-@javax.annotation.Generated(value = Array("org.openapitools.codegen.languages.ScalaPlayFrameworkServerCodegen"), date = "2021-02-06T14:29:07.988Z[Etc/UTC]")
+@javax.annotation.Generated(value = Array("org.openapitools.codegen.languages.ScalaPlayFrameworkServerCodegen"), date = "2021-02-06T22:43:22.950Z[Etc/UTC]")
 trait LostInTranslationApi {
   /**
     * add drawing round in lostInTranslation game
-    * @param text the text
     */
-  def addDrawingRound(uuid: String, text: String): List[LostInTranslationGame]
+  def addDrawingRound(uuid: String, file: TemporaryFile): List[LostInTranslationGame]
 
   /**
     * add text round in LostInTranslation game
