# back/modules/generated/app/be/frol/game/api/LostInTranslationApiImpl.scala
@@ -1,16 +1,17 @@
 package be.frol.game.api
 
 import be.frol.game.model.LostInTranslationGame
+import play.api.libs.Files.TemporaryFile
 
 /**
   * Provides a default implementation for [[LostInTranslationApi]].
   */
-@javax.annotation.Generated(value = Array("org.openapitools.codegen.languages.ScalaPlayFrameworkServerCodegen"), date = "2021-02-06T14:29:07.988Z[Etc/UTC]")
+@javax.annotation.Generated(value = Array("org.openapitools.codegen.languages.ScalaPlayFrameworkServerCodegen"), date = "2021-02-06T22:43:22.950Z[Etc/UTC]")
 class LostInTranslationApiImpl extends LostInTranslationApi {
   /**
     * @inheritdoc
     */
-  override def addDrawingRound(uuid: String, text: String): List[LostInTranslationGame] = {
+  override def addDrawingRound(uuid: String, file: TemporaryFile): List[LostInTranslationGame] = {
     // TODO: Implement better logic
 
     List.empty[LostInTranslationGame]
